[package]
name = "renarwhal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "89f14f9", features = [
    "network",
    "providers",
    "rpc-client",
    "rpc-types-eth",
    "signer-wallet",
    "transport-http",
    "pubsub",
] }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "89f14f9" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "89f14f9", features = [
    "pubsub",
] }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "89f14f9", features = [
    "pubsub",
    "ws",
] }
alloy-sol-types = "0.7.0"
# async-stream = "0.3.5"
# async-trait = "0.1.51"
# eyre = "0.6.12"
# futures = "0.3.17"
# futures-util = "0.3"
# reqwest = { version = "0.12", features = ["json"] }
# serde_json = "1.0.68"
# tracing = { version = "0.1.37", features = ["log"] }

auto_impl = "1.2.0"
ethers = "2.0.14"

hex-literal = "0.4.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
